--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,4 @@
-/* Copyright 2012 Jared M. Scott */
+/* Copyright 2012-2020 Jared M. Scott */
 /**
  * This work is licensed under the Creative Commons Attribution 3.0 Un-ported License.
  *  To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/
