--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,12 +1,12 @@
-/* Copyright 2012-2020 Jared M. Scott */
-/**
- * This work is licensed under the Creative Commons Attribution 3.0 Un-ported License.
- *  To view a copy of this license, visit http://creativecommons.org/licenses/by/3.0/
- *  or send a letter to
- *      Creative Commons,
- *      444 Castro Street, Suite 900,
- *      Mountain View, California, 94041, USA.
+/*
+ * Copyright (c) 2023 Jared M. Scott. This work is licensed under the Creative
+ * Commons Attribution 3.0 Un-ported License. To view a copy of this license,
+ * visit http://creativecommons.org/licenses/by/3.0/ or send a letter to
+ *         Creative Commons,
+ *         444 Castro Street, Suite 900,
+ *         Mountain View, California, 94041, USA.
  */
+
 body {
   position: absolute;
   height: 100%;
