--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,9 @@
  *         Mountain View, California, 94041, USA.
  */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
